# yt-downloader-rust

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  clippy.sh  clippy_pedantic.sh  fmt.sh  rustfmt.toml
.github/: CONTRIBUTING.md
.github/workflows/: audit.yml  stale.yml  tests.yml
crates/libytdlr/: Cargo.toml  README.md  diesel.toml
crates/libytdlr/examples/: rethumbnail.rs  simple.rs
crates/libytdlr/migrations/0000-00-00-000000_init/: down.sql  up.sql
crates/libytdlr/src/: error.rs  lib.rs  utils.rs
crates/libytdlr/src/data/: json_archive.rs  mod.rs  sql_models.rs  sql_schema.rs  video.rs
crates/libytdlr/src/data/cache/: media_info.rs  media_provider.rs  media_stage.rs  mod.rs
crates/libytdlr/src/data/old_archive/: json_archive.rs  mod.rs  provider.rs  video.rs
crates/libytdlr/src/main/: count.rs  download.rs  mod.rs  rethumbnail.rs  sql_utils.rs
crates/libytdlr/src/main/archive/: import.rs  mod.rs
crates/libytdlr/src/main/download/: assemble_cmd.rs  download_options.rs  mod.rs  parse_linetype.rs
crates/libytdlr/src/main_functionality/: count.rs  import.rs  mod.rs
crates/libytdlr/src/old/: archive_schema.rs  ask_edit.rs  mod.rs  move_finished.rs  setup_archive.rs  setup_arguments.rs  spawn_main.rs  utils.rs
crates/libytdlr/src/spawn/: editor.rs  ffmpeg.rs  mod.rs  multiplatform.rs  ytdl.rs
crates/libytdlr/src/traits/: context.rs  download_options.rs  mod.rs
crates/ytdlr/: Cargo.toml  build.rs
crates/ytdlr/src/: clap_conf.rs  cli.yml  logger.rs  main.rs  state.rs  utils.rs
crates/ytdlr/src/commands/: completions.rs  download.rs  import.rs  mod.rs  rethumbnail.rs  search.rs  unicode_test.rs
src/: clap_conf.rs  cli.yml  main.rs
src/lib/: archive_schema.rs  ask_edit.rs  error.rs  errors.rs  file_cleanup.rs  import_archive.rs  lib.rs  mod.rs  move_finished.rs  paths.rs  setup_archive.rs  setup_arguments.rs  spawn_main.rs  spawn_multi_platform.rs  utils.rs
src/lib/data/: mod.rs  provider.rs  video.rs
src/lib/main_functionality/: import.rs  mod.rs
src/lib/old/: archive_schema.rs  ask_edit.rs  file_cleanup.rs  import_archive.rs  mod.rs  paths.rs  setup_archive.rs  setup_arguments.rs  spawn_main.rs
src/lib/spawn/: editor.rs  ffmpeg.rs  mod.rs  multiplatform.rs  ytdl.rs
