[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
once_cell = "1.17"
log = "0.4"
regex = "1.7"
dirs-next = "2.0"
tempfile = "3.5"

[workspace.lints.clippy]
correctness = "deny"
style = "warn"
complexity = "warn"
perf = "warn"
needless_return = "allow"
implicit_return = "deny"
needless_doctest_main = "allow"
tabs_in_doc_comments = "allow"
wildcard_imports = "warn"
semicolon_if_nothing_returned = "warn"
default_trait_access = "warn"
manual_assert = "warn"
