[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.65"

[workspace.dependencies]
once_cell = "1.18"
log = "0.4"
regex = "1.10"
dirs = "5.0"
tempfile = "3.8"

[workspace.lints.clippy]
correctness = "deny"
style = "warn"
complexity = "warn"
perf = "warn"
needless_return = "allow"
implicit_return = "deny"
needless_doctest_main = "allow"
tabs_in_doc_comments = "allow"
wildcard_imports = "warn"
semicolon_if_nothing_returned = "warn"
default_trait_access = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
ignored_unit_patterns = "warn"
manual_let_else = "warn"
single_match_else = "warn"
if_not_else = "warn"
