[package]
name = "libytdlr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex.workspace = true
once_cell.workspace = true
log.workspace = true
dirs-next.workspace = true
path-absolutize = "3.0" # Replace with official implementation, RFC: https://github.com/rust-lang/rfcs/issues/2208
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1" }
chrono = "0.4"
duct = "0.13" # required to pipe stderr into stdout
thiserror = "1.0"

[dev-dependencies]
serde_test = "1.0.159"
uuid = { version = "1.3", features = ["v4"] }
tempfile.workspace = true

[lib]
name = "libytdlr"
path = "src/lib.rs"

[lints]
workspace = true
