[package]
name = "libytdlr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "A library to interact with youtube-dl/p with a custom archive"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex.workspace = true
log.workspace = true
dirs.workspace = true
path-absolutize = "3.1" # Replace with official implementation, RFC: https://github.com/rust-lang/rfcs/issues/2208
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1" }
chrono = "0.4"
duct = "1.0.0" # required to pipe stderr into stdout
thiserror = "2.0"
lofty = "0.22.4"

[dev-dependencies]
serde_test = "1.0"
uuid = { version = "1.8", features = ["v4"] }
tempfile.workspace = true

[lib]
name = "libytdlr"
path = "src/lib.rs"

[lints]
workspace = true

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = []

[[example]]
name = "rethumbnail"
path = "examples/rethumbnail.rs"
required-features = []
